--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 .card {
   text-align: center;
+  color: white;
   background-color: teal;
-  border: 10px 10px 10px 10px;
+  padding: 10px 10px 10px 10px;
+  border: solid yellow 5px;
+  border-radius: 30px 30px 30px 30px;
 }
